<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Go1978</string>
    <string name="action_settings">Settings</string>
    <string name="action_tencent_login">Tencent Login</string>
    <string name="action_sina_login">Sina Login</string>
    <string name="action_share">Share</string>
    <string name="action_camera">Camera</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_save">Save</string>
    <string name="text_hint">Press to input</string>
    <string name="menu_clear_cache">Clear Cache</string>
    <string name="uploading">Uploading...</string>
    <string name="hint">Tap to enter text</string>
    <string name="loading">loading...</string>
    <string name="save_ok">Save Successfully</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="uploaded_failed_message">Upload failed, would you like to try again?</string>
    <string name="str_btn_yes">Yes	</string>
    <string name="str_btn_no">No</string>
    <string name="upload_to_album">Upload the picture to website album?</string>
    <string name="dialog_edit_picture">Do you want to edit picture?</string>
</resources>
