<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_clear_cache"
        android:icon="@drawable/cancel"
        android:showAsAction="never"
        android:title="@string/menu_clear_cache"/>
    <item
        android:id="@+id/action_tencent_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_tencent_login"/>
    <item
        android:id="@+id/action_sina_login"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sina_login"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_camera"/>
    <item
        android:id="@+id/action_editor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="Editor"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>